2014-08-29  James Pallister  <james.pallister@embecosm.com>
	
	Added a new pruning method. This method records the state of the registers
	and carry if no solutions are found after recursing. Before subsequent
	calls to synth this hash table is checked. If the current registers and
	carry are in the table, and the allowed cost is lower or equal to the
	stored value then the current sequence cannot be optimal, so skip it.

	* superopt.c: Include hashtable.c and add a hash_skipped global to count
		the amount of pruning.
	(recurse): Before calling synth look up the registers and carry in the
		table. Don't do this if allowed_cost is small, since it is quicker
		just to test in this case. If no more results are found, add registers
		and carry to the hashtable
	* hashtable.c: New file. Implementation of a hashtable.


2014-08-29  James Pallister  <james.pallister@embecosm.com>

	* superopt.h: 8 bit word should be selected if the bits per word is 8,
		not just if AVR is selected.

2014-08-19  James Pallister  <james.pallister@embecosm.com>

	* superopt.c: Changed the test counters and limits to 64 bit to
		avoid overflow.

2014-08-18  James Pallister  <james.pallister@embecosm.com>
	
	* superopt.c: Add a -test-limit option to specify the maximum
		number of tests to evaluate.

2014-08-18  James Pallister  <james.pallister@embecosm.com>

	* goal.def: Changed p24 to work with smaller bit widths.

2014-08-18  James Pallister  <james.pallister@embecosm.com>
	
	* superopt.c (output_assembly: Added adc instruction for AVR.
	* synth.def (synth): Added adc instruction for AVR.

2014-08-18  James Pallister  <james.pallister@embecosm.com>
	
	* superopt.c: Added a test count, for the number of full sequences
		that have been evaluated.

2014-08-18  James Pallister  <james.pallister@embecosm.com>

	* goal.def: To keep compatability don't generate any constants 
		larger than 32-bits.

2014-08-17  James Pallister  <james.pallister@embecosm.com>
